[workspace]
members = [
    "crates/api",       # Developer api
    "crates/frontend",  # ir-compiler
    "crates/middleend", # optimizer
    "crates/backend",   # machine code compiler
    "crates/test-lang", # language for testing
    "crates/ciri", "crates/irparser",      # IR Interpreter
]
resolver = "2"
