[workspace]
members = [
    "crates/api",       # Developer api
    "crates/frontend",  # IR generator
    "crates/middleend", # optimizer
    "crates/backend",   # machine code compiler
    "crates/test-lang", # language for testing
    "crates/irparser",  # IR Lexer & Parser
    "crates/engine",    # Citadel execution engine
]
resolver = "2"
