[package]
name = "citadel-api"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
citadel-frontend = { path = "../frontend" }
citadel-middleend = { path = "../middleend" }
citadel-backend = { path = "../backend" }
