[package]
name = "citadel-api"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
citadel-frontend = { path = "../frontend", version = "*" }
citadel-middleend = { path = "../middleend", version = "*" }
citadel-backend = { path = "../backend", version = "*" }
