[package]
name = "citadel-backend"
version = "0.0.1"
edition = "2021"
license = "MIT"
readme = "README.md"
description = "The backend/codegenerator of the citadel compiler backend"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
citadel-frontend = { path = "../frontend",  version = "0.0.1" }

[dev-dependencies]
citadel-irparser = { path = "../irparser" }
