[package]
name = "ciri"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clutils = "0.0.11"
citadel-frontend = { path = "../frontend" }
citadel-irparser = { path = "../irparser" }
clap = { version = "4.5.4", features = ["derive"] }
