[package]
name = "citadel-middleend"
version = "0.0.11"
edition = "2021"
license = "MIT"
readme = "README.md"
description = "The middleend/optimizer for the citadel compiler backend"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
citadel-frontend = { path = "../frontend", version = "0.0.11" }
