[package]
name = "test-lang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clutils = "0.0.11"
citadel-api = { path = "../api" }
clap = { version = "4.5.4", features = ["derive"] }
logos = "0.14.0"
colored = "2.1.0"
